--- a/app/package.json
+++ b/app/package.json
@@ -4,12 +4,11 @@
     "description": "GUI to manage UNDR datasets",
     "author": {
         "name": "Alexandre Marcireau",
-        "email": "a.marcireau@gmail.com"
+        "email": "alexandre.marcireau@gmail.com"
     },
     "version": "0.1.0",
     "dependencies": {
-        "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "electron-store": "8.0.0"
     },
     "devDependencies": {
         "@svgr/core": "5.5.0",
@@ -17,21 +16,25 @@
         "@svgr/plugin-svgo": "5.5.0",
         "@types/react": "17.0.2",
         "@types/react-dom": "17.0.2",
+        "@types/react-router-dom": "5.1.8",
         "@types/styled-components": "5.1.14",
         "@vitejs/plugin-react-refresh": "1.3.6",
         "cross-env": "7.0.3",
         "electron": "13.2.1",
         "electron-builder": "22.11.7",
-        "electron-store": "8.0.0",
         "esbuild": "0.12.26",
         "prettier": "2.3.2",
-        "styled-components": "5.3.0",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-router-dom": "5.3.0",
+        "styled-components": "5.3.1",
         "typescript": "4.3.5",
         "vite": "2.5.0"
     },
     "scripts": {
         "watch": "cross-env MODE=development node scripts.js watch",
         "release": "cross-env MODE=production node scripts.js release",
+        "generate-js": "cross-env MODE=development node scripts.js generate-js",
         "lint": "prettier --write ."
     },
     "prettier": {
@@ -40,6 +43,7 @@
     },
     "main": "build/main/main.js",
     "build": {
+        "asar": false,
         "appId": "au.edu.icns.undr",
         "files": [
             "package.json",
