--- a/aws/package.json
+++ b/aws/package.json
@@ -1,10 +1,68 @@
 {
     "private": true,
+    "type": "module",
+    "config": {
+        "s3_url": "https://dvin548rgfj0n.cloudfront.net",
+        "s3_website_url": "https://www.undr.space"
+    },
     "dependencies": {
+        "@svgr/core": "6.3.1",
         "cross-env": "7.0.3",
-        "esbuild": "0.14.38",
+        "esbuild": "0.14.50",
         "mustache": "4.2.0",
-        "prettier": "2.6.2"
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "styled-components": "5.3.5"
+    },
+    "devDependencies": {
+        "@types/mustache": "4.2.1",
+        "@types/node": "18.6.2",
+        "@types/react": "18.0.15",
+        "@types/react-dom": "18.0.6",
+        "@types/styled-components": "5.1.25",
+        "@typescript-eslint/eslint-plugin": "5.31.0",
+        "@typescript-eslint/parser": "5.31.0",
+        "eslint": "8.20.0",
+        "prettier": "2.7.1"
+    },
+    "eslintConfig": {
+        "env": {
+            "browser": true,
+            "es2021": true
+        },
+        "extends": [
+            "eslint:recommended",
+            "plugin:react/recommended",
+            "plugin:@typescript-eslint/recommended"
+        ],
+        "parser": "@typescript-eslint/parser",
+        "parserOptions": {
+            "ecmaFeatures": {
+                "jsx": true
+            },
+            "ecmaVersion": "latest",
+            "sourceType": "module"
+        },
+        "plugins": [
+            "react",
+            "@typescript-eslint"
+        ],
+        "rules": {
+            "no-unused-vars": "off",
+            "@typescript-eslint/no-unused-vars": [
+                "warn",
+                {
+                    "argsIgnorePattern": "^_",
+                    "varsIgnorePattern": "^_",
+                    "caughtErrorsIgnorePattern": "^_"
+                }
+            ]
+        },
+        "settings": {
+            "react": {
+                "version": "detect"
+            }
+        }
     },
     "prettier": {
         "tabWidth": 4,
@@ -12,6 +70,7 @@
     },
     "scripts": {
         "build": "cross-env MODE=production node build.js",
-        "lint": "prettier --write ."
+        "lint": "prettier --write . && eslint .",
+        "watch": "cross-env MODE=development node build.js --watch"
     }
 }
