--- a/aws/package.json
+++ b/aws/package.json
@@ -8,7 +8,7 @@
     "dependencies": {
         "@svgr/core": "6.3.1",
         "cross-env": "7.0.3",
-        "esbuild": "0.14.50",
+        "esbuild": "0.15.5",
         "mustache": "4.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -16,13 +16,14 @@
     },
     "devDependencies": {
         "@types/mustache": "4.2.1",
-        "@types/node": "18.6.2",
-        "@types/react": "18.0.15",
+        "@types/node": "18.7.11",
+        "@types/react": "18.0.17",
         "@types/react-dom": "18.0.6",
-        "@types/styled-components": "5.1.25",
-        "@typescript-eslint/eslint-plugin": "5.31.0",
-        "@typescript-eslint/parser": "5.31.0",
-        "eslint": "8.20.0",
+        "@types/styled-components": "5.1.26",
+        "@typescript-eslint/eslint-plugin": "5.33.0",
+        "@typescript-eslint/parser": "5.33.0",
+        "eslint": "8.22.0",
+        "eslint-plugin-react": "7.30.1",
         "prettier": "2.7.1"
     },
     "eslintConfig": {
@@ -49,6 +50,8 @@
         ],
         "rules": {
             "no-unused-vars": "off",
+            "react/jsx-uses-react": "off",
+            "react/react-in-jsx-scope": "off",
             "@typescript-eslint/no-unused-vars": [
                 "warn",
                 {
@@ -70,7 +73,7 @@
     },
     "scripts": {
         "build": "cross-env MODE=production node build.js",
-        "lint": "prettier --write . && eslint .",
+        "lint": "prettier --write . --ignore-path .gitignore && eslint --ignore-path .gitignore .",
         "watch": "cross-env MODE=development node build.js --watch"
     }
 }
