--- a/undr_default.toml
+++ b/undr_default.toml
@@ -2,25 +2,25 @@ directory = "datasets"
 
 [[datasets]]
 name = "dvs09"
-url = "https://rds.westernsydney.edu.au/Institutes/MARCS/ICNS/UNDR/dvs09/"
+url = "https://www.undr.space/dvs09/"
 mode = "disabled"
 
 [[datasets]]
 name = "dvsact16"
-url = "https://rds.westernsydney.edu.au/Institutes/MARCS/ICNS/UNDR/dvsact16/"
+url = "https://www.undr.space/dvsact16/"
 mode = "disabled"
 
 [[datasets]]
 name = "dvsflow16"
-url = "https://rds.westernsydney.edu.au/Institutes/MARCS/ICNS/UNDR/dvsflow16/"
+url = "https://www.undr.space/dvsflow16/"
 mode = "disabled"
 
 [[datasets]]
 name = "ncaltech101"
-url = "https://rds.westernsydney.edu.au/Institutes/MARCS/ICNS/UNDR/ncaltech101/"
+url = "https://www.undr.space/ncaltech101/"
 mode = "disabled"
 
 [[datasets]]
 name = "nmnist"
-url = "https://rds.westernsydney.edu.au/Institutes/MARCS/ICNS/UNDR/nmnist/"
+url = "https://www.undr.space/nmnist/"
 mode = "disabled"
