--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,12 +11,18 @@ repository = "https://github.com/neuromorphicsystems/undr/"
 readme = "../README.md"
 license = "MIT"
 edition = "2021"
+include = ["specification/*.json", "specification/*.toml"]
 
 [dependencies]
-brotli = "3.3.4"
-jsonschema = "0.16.1"
+brotli = "3.3"
+lazy_static = "1.4"
+regex = "1.7"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+thiserror = "1.0"
 toml = "0.5.9"
+ureq = "2.5"
+url = { version = "2.3", features = ["serde"] }
 
 [profile.release]
 lto = true
