--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -16,11 +16,19 @@ keywords = ["UNDR"]
 
 [dependencies]
 brotli = "3.3"
+digest = "0.10.6"
+futures = "0.3.25"
+generic-array = "0.14.6"
 lazy_static = "1.4"
 regex = "1.7"
-serde = { version = "1.0", features = ["derive"] }
+reqwest = "0.11.13"
+serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+sha3 = "0.10.6"
 thiserror = "1.0"
+tokio = {version = "1.22", features = ["macros", "rt-multi-thread", "sync"]}
 toml = "0.5.9"
-ureq = "2.5"
-url = { version = "2.3", features = ["serde"] }
+url = {version = "2.3", features = ["serde"]}
+
+[dev-dependencies]
+anyhow = "1.0"
