--- a/.github/workflows/update_documentation.yml
+++ b/.github/workflows/update_documentation.yml
@@ -10,7 +10,7 @@ jobs:
             - uses: actions/checkout@v3
             - uses: actions/setup-python@v3
             - name: Install dependencies
-                run: pip install sphinx sphinx_rtd_theme
+                run: pip install -r documentation/requirements.txt
             - name: Sphinx build
                 run: sphinx-build documentation documentation/_build
             - name: Deploy
