--- a/python/.gitignore
+++ b/python/.gitignore
@@ -1,8 +1,9 @@
 __pycache__
-*.pyc
 *.egg-info
-undr
+*.pyc
+build
 examples/datasets
-examples/results
 examples/logs
 examples/progress.db
+examples/results
+undr
