--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "app"
-version = "0.1.0"
-description = "A Tauri App"
+version = "1.0.0"
+description = "Undr downloads and decompresses datasets"
 authors = [
     "Alexandre Marcireau",
     "International Centre for Neuromorphic Systems",
