--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -20,6 +20,7 @@ jobs:
           with:
               path: dist/undr.tar.gz
   import_library:
+    needs: [build_sdist]
     strategy:
       matrix:
         python: ["3.7", "3.8", "3.9", "3.10", "3.11"]
