--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -15,10 +15,12 @@ jobs:
     steps:
         - uses: actions/checkout@v3
         - run: pipx run build --sdist
+          working-directory: python
         - run: mv dist/*.tar.gz dist/undr.tar.gz
+          working-directory: python
         - uses: actions/upload-artifact@v3
           with:
-              path: dist/undr.tar.gz
+              path: python/dist/undr.tar.gz
   import_library:
     needs: [build_sdist]
     strategy:
@@ -34,6 +36,6 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: undr.tar.gz
-          path: dist/undr.tar.gz
+          path: python/dist/undr.tar.gz
       - run: python -m pip install undr.tar.gz
       - run: python -c 'import undr'
