--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -14,7 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v3
-        - run: pipx run build --sdist
+        - uses: actions/setup-python@v4
+          with:
+            python-version: '3.11'
+        - run: python setup.py sdist
           working-directory: python
         - run: mv dist/*.tar.gz dist/undr.tar.gz
           working-directory: python
