--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -23,7 +23,8 @@ jobs:
           working-directory: python
         - uses: actions/upload-artifact@v3
           with:
-              path: python/dist/undr.tar.gz
+            name: undr.tar.gz
+            path: python/dist/undr.tar.gz
   import_library:
     needs: [build_sdist]
     strategy:
@@ -39,6 +40,6 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: undr.tar.gz
-          path: python/dist/undr.tar.gz
+          path: undr.tar.gz
       - run: python -m pip install undr.tar.gz
       - run: python -c 'import undr'
