--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -23,7 +23,7 @@ jobs:
           working-directory: python
         - uses: actions/upload-artifact@v3
           with:
-            name: undr.tar.gz
+            name: undr-sdist
             path: python/dist/undr.tar.gz
   import_library:
     needs: [build_sdist]
@@ -39,7 +39,8 @@ jobs:
           python-version: ${{ matrix.python }}
       - uses: actions/download-artifact@v3
         with:
-          name: undr.tar.gz
+          name: undr-sdist
           path: undr.tar.gz
+      - run: ls
       - run: python -m pip install undr.tar.gz
       - run: python -c 'import undr'
