--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -19,12 +19,10 @@ jobs:
             python-version: '3.11'
         - run: python setup.py sdist
           working-directory: python
-        - run: mv dist/*.tar.gz dist/undr.tar.gz
-          working-directory: python
         - uses: actions/upload-artifact@v3
           with:
             name: undr-sdist
-            path: python/dist/undr.tar.gz
+            path: python/dist/*.tar.gz
   import_library:
     needs: [build_sdist]
     strategy:
@@ -40,6 +38,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: undr-sdist
-          path: undr.tar.gz
-      - run: python -m pip install ./undr.tar.gz
+          path: dist
+      - run: ls -R
+      - run: python -m pip install dist/*.tar.gz
       - run: python -c 'import undr'
