Only trigger test workflows for commits that do not start with [doc]

--- a/.github/workflows/update_documentation.yml
+++ b/.github/workflows/update_documentation.yml
@@ -10,6 +10,7 @@ permissions:
 
 jobs:
   update_documentation:
+    if: startsWith(github.event.head_commit.message, '[doc]')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
