--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -4,12 +4,10 @@ on:
   push:
     branches:
       - main
-env:
-    CIBW_ARCHS_MACOS: x86_64 arm64
-    CIBW_ARCHS_LINUX: auto aarch64 ppc64le s390x
 
 jobs:
   build_sdist:
+    if: ${{ !startsWith(github.event.head_commit.message, '[doc]') }}
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
