--- a/.github/workflows/test_rust.yml
+++ b/.github/workflows/test_rust.yml
@@ -4,13 +4,10 @@ on:
   push:
     branches:
       - main
-env:
-    CIBW_ARCHS_MACOS: x86_64 arm64
-    CIBW_ARCHS_LINUX: auto aarch64 ppc64le s390x
 
 jobs:
   build:
-    name: Build the library
+    if: ${{ !startsWith(github.event.head_commit.message, '[doc]') }}
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v3
