--- a/.github/workflows/update_documentation.yml
+++ b/.github/workflows/update_documentation.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   update_documentation:
-    if: startsWith(github.event.head_commit.message, '[doc]')
+    if: ${{ startsWith(github.event.head_commit.message, '[doc]') || startsWith(github.event.head_commit.message, '[release]') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
