--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -25,7 +25,7 @@ jobs:
     needs: [build_sdist]
     strategy:
       matrix:
-        python: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python: ["3.8", "3.9", "3.10", "3.11"]
         os: [ubuntu-latest, macos-latest, windows-latest]
     name: Import library on ${{ matrix.os }} with Python ${{ matrix.python }}
     runs-on: ${{ matrix.os }}
