--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -37,6 +37,6 @@ jobs:
         with:
           name: undr-sdist
           path: dist
-      - run: ls -R
       - run: python -m pip install dist/*.tar.gz
+        shell: bash
       - run: python -c 'import undr'
