--- a/.github/workflows/update_documentation.yml
+++ b/.github/workflows/update_documentation.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           python-version: '3.11'
       - run: python documentation/build.py
-      - name: deploy
+      - name: deploy to GitHub pages
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         with:
