--- a/.github/workflows/publish_python.yml
+++ b/.github/workflows/publish_python.yml
@@ -19,8 +19,7 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: undr-sdist
-          path: python/dist/*.tar.gz
-
+          path: dist/*.tar.gz
   upload_pypi:
     name: Upload to PyPI
     runs-on: ubuntu-latest
@@ -28,7 +27,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
             name: undr-sdist
-            path: python/dist
+            path: dist
       - uses: pypa/gh-action-pypi-publish@v1.5.0
         with:
             password: ${{ secrets.PYPI_API_TOKEN }}
