--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -14,7 +14,7 @@ jobs:
         - uses: actions/checkout@v3
         - uses: actions/setup-python@v4
           with:
-            python-version: '3.11'
+            python-version: '3.12'
         - run: python setup.py sdist
           working-directory: python
         - uses: actions/upload-artifact@v3
@@ -22,13 +22,13 @@ jobs:
             name: undr-sdist
             path: python/dist/*.tar.gz
   import_library:
+    name: Import library on ${{ matrix.os }} with Python ${{ matrix.python }}
+    runs-on: ${{ matrix.os }}
     needs: [build_sdist]
     strategy:
       matrix:
-        python: ["3.8", "3.9", "3.10", "3.11"]
+        python: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         os: [ubuntu-latest, macos-latest, windows-latest]
-    name: Import library on ${{ matrix.os }} with Python ${{ matrix.python }}
-    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/setup-python@v4
         with:
