Use pipx instead of manually calling setup.py

--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -15,7 +15,7 @@ jobs:
         - uses: actions/setup-python@v4
           with:
             python-version: '3.12'
-        - run: python setup.py sdist
+        - run: pipx run build --sdist
           working-directory: python
         - uses: actions/upload-artifact@v3
           with:
